# kde-caps-lock-osd

./: .gitignore  CMakeLists.txt  Makefile  README.md  kde-caps-lock-osd.kdev4  metadata.json
.kdev4/: kde-caps-lock-osd.kdev4
src/: CMakeLists.txt  main.cpp  osd.cpp  osd.h
